# SuadoMathParser

./: CMakeLists.txt
example/: CMakeLists.txt  Main.c
include/SuadoMathParser/: DLL.h  SuadoMathParser.h
src/: SuadoMathParser.c
